wiki: fixed text position after jumping to an anchor, re #10866
git-svn-id: svn://develop.studip.de/studip/trunk@59258 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/scss/wiki.scss
+++ b/resources/assets/stylesheets/scss/wiki.scss
@@ -38,8 +38,14 @@ textarea.wiki-editor {
     width: 98%;
 }
 
-body#wiki #main_content td.printcontent:last-child:not(:first-child) {
-    padding-right: 22px;
+body#wiki #main_content {
+    a:not([href]) {
+        top: floor(-$bar-bottom-container-height - 10);
+        position: relative;
+    }
+    td.printcontent:last-child:not(:first-child) {
+        padding-right: 22px;
+    }
 }
 
 .no-js #wiki button[name="submit-and-edit"] {
